@@ -1,3 +1,14 @@
+Mon Jul 22 19:12:20 2002  Jeff Parsons <parsons@cs.wustl.edu>
+
+        * TAO_IDL/be/be_visitor_field/cdr_op_ci.cpp:
+
+          Fixed a previous change (probably made by me) that
+          caused incorrect code generation for the CDR
+          insertion/extraction of a CORBA::Object
+          when it appears as a struct/union/exception member.
+          Thanks to Johnny Willemsen <jwillemsen@remedy.nl> for
+          pointing out the resulting build errors.
+
 Mon Jul 22 18:25:52 2002  Jeff Parsons <parsons@cs.wustl.edu>
 
         * TAO_IDL/be/be_visitor_sequence/cdr_op_cs.cpp:
